<resources>
    <string name="app_name">Trivia_059</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Title_Activity">TRIVIA</string>

    <string name="greeting">Hola,  %1$s!</string>
    <string name="try_again_msg">Bueno, te equivocaste %1$s, ¡intentalo otra vez!</string>
    <string name="trivia_question_one">¿A que logo pertenece la imagen?</string>
    <string name="img_content_description">Whatsapp Logo</string>
    <string name="rb_answer_one">Pertencea a Facebook</string>
    <string name="rb_answer_two">Pertencea a Twitter</string>
    <string name="rb_answer_three">Pertenece a Whatsapp</string>
    <string name="rb_answer_four">Pertencea a Instagram</string>
    <string name="send_btn">Enviar</string>
    <string name="write_name">Escribe tu Nombre</string>
    <string name="trivia_welcome_msg">Bienvenido a Logo Trivia, Ingresa tu nombre para comenzar…</string>
    <string name="start_btn">Comenzar</string>
    <string name="tray_again_btn">Intentalo otra vez</string>
    <string name="win_msg">!Genial %1$s¡, Ganaste…</string>
</resources>